syntax = "proto3";

package kvstore;

option go_package = "github.com/ehsundar/kvstore/protobuf/kvstore";

import "google/protobuf/descriptor.proto";


message KVStoreKeyOptions {
  string name = 1;

  message StaticKeyMode {
    string key = 1;
  }
  message DynamicKeyMode {}
  oneof mode {
    StaticKeyMode static_key = 2;
    DynamicKeyMode dynamic_key = 3;
  }
}

message KVStoreValueOptions {
  string name = 1;
}

extend google.protobuf.MessageOptions {
  KVStoreKeyOptions key_options = 1000;
  KVStoreValueOptions value_options = 1001;
}
